<resources>
    <string name="app_name">MaprDataSender</string>
    <string name="greetings">Press button below to start sending data</string>
    <string name="button_connect">Connect</string>
    <string name="button_disconnect">Disconnect</string>
    <string name="button_photo">Photo</string>
    <string name="button_settings">Settings</string>
    <string name="button_exit">Exit</string>
    <string name="label_host">Host</string>
    <string name="label_port">Port</string>
    <string name="label_username">Username</string>
    <string name="label_password">Password</string>
    <string name="default_host">10.2.15.168</string>
    <string name="default_port">8080</string>
    <string name="default_username">mapr</string>
    <string name="default_password">mapr</string>
    <string name="key_host">host</string>
    <string name="key_port">port</string>
    <string name="key_username">username</string>
    <string name="key_password">password</string>
</resources>
