<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        tools:context=".DataSenderApplication" android:id="@+id/main_layout">

    <android.support.constraint.ConstraintLayout android:layout_width="match_parent"
                                                 android:layout_height="match_parent"
                                                 app:layout_constraintBottom_toBottomOf="parent"
                                                 app:layout_constraintTop_toTopOf="parent"
                                                 app:layout_constraintLeft_toLeftOf="parent"
                                                 app:layout_constraintRight_toRightOf="parent"
                                                 android:id="@+id/content_layout"
                                                 app:layout_constraintHorizontal_bias="0.0"
                                                 app:layout_constraintVertical_bias="1.0">
        <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_connect"
                android:text="@string/button_connect"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.285" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.501"/>
        <Button
                android:text="@string/button_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_photo" android:layout_marginTop="40dp"
                app:layout_constraintTop_toBottomOf="@+id/button_connect" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.501"
                app:layout_constraintVertical_bias="0.0"/>
        <Button
                android:text="@string/button_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_settings"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.501"
                android:layout_marginTop="40dp" app:layout_constraintTop_toBottomOf="@+id/button_photo"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.0"/>
        <Button
                android:text="@string/button_exit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_exit"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.498"
                android:layout_marginTop="40dp" app:layout_constraintTop_toBottomOf="@+id/button_settings"
                app:layout_constraintVertical_bias="0.0"/>
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>